# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.501 2006/01/10 15:46:22 rocket Exp $

  10 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/kmerge.sh:
  filter kname - and . for kmerge.sh
  
  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Added sparc64 to sparc lines for create-iso.sh to fix ISO creation on sparc64.

  05 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  change .digests to .DIGESTS

  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh:
  Commented ccache for genkernel build which will resolve #117648 until a
  proper solution can be found. This is 2.0_rc13.

  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Added patch from vapier for bug #117254.

  03 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/mips.py, arch/ppc.py, arch/ppc64.py, arch/s390.py,
  arch/sh.py, arch/sparc.py, arch/sparc64.py, arch/x86.py:
  Added -pipe to default CFLAGS/CXXFLAGS and doing some minor cleanup
  (comments mostly).

  03 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Remove chost/cflags etc. warning messages

  31 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Attempt to fix bug 117253; chost is wrong on autoresume

  28 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/embedded_target.py,
  modules/generic_stage_target.py, modules/netboot_target.py,
  modules/stage1_target.py:
  make setting of destdir more global and part of generic_stage_target

  28 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/netboot_target.py:
  Fix destpath bug in netboot target

  28 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py: